# sancti

./: .gitmodules  CMakeLists.txt
assets/: packing_instrs.json
src/: asset_indexes.h  enemies.h  enemy_ents.cpp  enemy_types.cpp  entry.c  entry.cpp  game.cpp  game.h  game_states.h  psycho_enemy.cpp  sprites.c  sprites.cpp  sprites.h  title_screen.cpp  title_screen.h  wanderer_enemy.cpp  world.cpp  world.h
src/ents/: enemy_ent.c  ent_types.c  ent_types.h  hitbox_ent.c  player_ent.c
src/scenes/: scene_types.c  scene_types.h  title_screen.c  title_screen.h  world.c  world.h
